--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "oddOrEven": "node src/oddOrEvent/oddOrEven.js",
+    "isUnique": "node src/isUnique/isUnique.js"
   },
   "repository": {
     "type": "git",
