--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "oddOrEven": "node src/oddOrEvent/oddOrEven.js",
-    "isUnique": "node src/isUnique/isUnique.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
